# retrievAI

./: .env.example  .gitignore  404.html  DEPLOYMENT.md  Home.py  README-v0.2.md  README.md  TESTING.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  index.html  ingest.py  mkdocs.yml  nginx.conf  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml  docs.yml
.retrievai/: app_settings.yaml  file_hashes.txt
.streamlit/: secrets.example.toml
DEPLOYMENT/: index.html
TESTING/: index.html
api/: index.html
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20251110_01_initial_schema.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/v1/: admin.py  auth.py  chat.py  chunks.py  documents.py  settings.py  upload.py
backend/app/core/: cache.py  crypto.py  ingestion.py  markdown.py  ocr.py  openai_keys.py  pdf_loaders.py  pdf_parsers.py  prompts.py  rag.py  security.py  user_settings.py  vectorstore.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/models/: __init__.py  auth.py
backend/app/scripts/: backfill_file_sizes.py
backend/app/workers/: __init__.py  settings.py  tasks.py
backend/scripts/: backfill_file_sizes.py  seed_test_data.py
docs/: DEPLOYMENT.md  api.md  index.md
docs/development/: architecture.md  (+1 more)
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
migration_scripts/: init_database.py  migrate_chromadb.py  migrate_documents.py  migrate_settings.py  migrate_users.py  populate_documents.py  test_chromadb.py  verify_chromadb_integration.py  verify_migration.py
nrec/: pyproject.toml
nrec/.retrievai/: app_settings.yaml  file_hashes.txt
nrec/retrievai/: app.py  run_app.py
nrec/retrievai/routes/: profile.py
nrec/retrievai/utils/: auth_tools.py  ingestion_tools.py  prompt_tools.py  pymupdf4llm_loaders.py  pymupdf4llm_parsers.py
pages/: Documents.py  Source_finder.py
retrievai/: Home.py  app.py  ingest.py  run_app.py  test_pymupdf4llm.py
scripts/: test-env.sh
search/: search_index.json
x-platform/: README.md  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
(+116 files in other folders)
